--- a/2D_Editor/App.xaml
+++ b/2D_Editor/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:_2D_Editor"
-             StartupUri="MainWindow.xaml">
+             StartupUri="WelcomeWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
