--- a/2D_Editor/MainWindow.xaml
+++ b/2D_Editor/MainWindow.xaml
@@ -4,7 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2D_Editor"
-    
+        
+        xmlns:converters="clr-namespace:_2D_Editor.Converters"
+        xmlns:impres="clr-namespace:ImmersivePresentation;assembly=ImmersivePresentation"
         xmlns:custom="clr-namespace:_2D_Editor.CustomControls"
         
         mc:Ignorable="d"
@@ -22,6 +24,11 @@
         <CommandBinding Command="local:CustomCommands.PresentProperties" CanExecute="PresentPropertiesCommand_CanExecute" Executed="PresentPropertiesCommand_Executed"/>
         <CommandBinding Command="Help" CanExecute="HelpCommand_CanExecute" Executed="HelpCommand_Executed"/>
     </Window.CommandBindings>
+    <Window.Resources>
+        <converters:PercentageToAbsolute x:Key="RelativePosToAbsolutePos"/>
+        <converters:RelativePathToImageSource x:Key="RelativePathToImageSource"/>
+        <converters:BoolToThickness x:Key="BoolToThickness"/>
+    </Window.Resources>
 
     <DockPanel Background="#FFF5F5F6">
         <!--The menu at the top-->
@@ -51,13 +58,13 @@
             <StackPanel Orientation="Horizontal" Height="50" Margin="10,5,0,5">
                 <!--Textbox for adding text-->
                 <StackPanel Width="50">
-                    <Image Source="/Images/text_box.png" Stretch="Uniform" Width="30"/>
+                    <Image Source="/Images/text_box.png" Stretch="Uniform" Width="30" MouseLeftButtonDown="canvasAddText_LeftMouseDown"/>
                     <TextBlock>Text Box</TextBlock>
                 </StackPanel>
                 <!--Imagebox for adding Images-->
                 <StackPanel Width="50" Height="50">
-                    <Image Source="/Images/picture.png" Stretch="Uniform" Width="30"/>
-                    <TextBlock>Text Box</TextBlock>
+                    <Image Source="/Images/picture.png" Stretch="Uniform" Width="30" MouseLeftButtonDown="canvasAddImage_LeftMouseDown"/>
+                    <TextBlock>Image</TextBlock>
                 </StackPanel>
             </StackPanel>
         </Border>
@@ -91,7 +98,7 @@
                 <Border x:Name="propertiesViewContent" Width="300">
                     <StackPanel>
                         <Label>
-                            <TextBlock>Properties here.</TextBlock>
+                            <TextBlock>Element Properties.</TextBlock>
                         </Label>
                     </StackPanel>
                 </Border>
@@ -154,9 +161,42 @@
             <Border Grid.Row="0" Grid.RowSpan="1" Grid.Column="1" Grid.ColumnSpan="2"  Margin="5">
                 <Viewbox Stretch="Uniform">
                     <Border BorderBrush="#808e9b" BorderThickness="0.5">
-                        <Canvas Background="#ffffff" Width="1920" Height="1080">
-
-                        </Canvas>
+                        <ItemsControl x:Name="canvasPreview">
+                            <ItemsControl.Resources>
+                                <DataTemplate DataType="{x:Type impres:Image2D}">
+                                    <Border BorderBrush="Blue" BorderThickness="{Binding highlighted, Converter={StaticResource BoolToThickness}}">
+                                        <Image Width="{Binding xScale, Converter={StaticResource RelativePosToAbsolutePos}, ConverterParameter=1920}" 
+                                           Height="{Binding xScale, Converter={StaticResource RelativePosToAbsolutePos}, ConverterParameter=1080}" 
+                                           Source="{Binding relativeImageSource, Converter={StaticResource RelativePathToImageSource}}"
+                                           Stretch="Fill"
+                                           Tag="{Binding }"
+                                           MouseLeftButtonDown="canvasImage_LeftMouseDown"
+                                           />
+                                    </Border>
+                                </DataTemplate>
+                                <DataTemplate DataType="{x:Type impres:Text2D}">
+                                    <Border BorderBrush="Blue" BorderThickness="{Binding highlighted, Converter={StaticResource BoolToThickness}}">
+                                        <Label Content="{Binding content}" 
+                                           Canvas.Left="{Binding xPosition, Converter={StaticResource RelativePosToAbsolutePos}, ConverterParameter=1920}" 
+                                           Canvas.Top="{Binding yPosition, Converter={StaticResource RelativePosToAbsolutePos}, ConverterParameter=1080}"
+                                           FontSize="{Binding fontsize}"
+                                           Tag="{Binding }"
+                                           MouseLeftButtonDown="canvasLabel_LeftMouseDown"/>
+                                    </Border>
+                                </DataTemplate>
+                            </ItemsControl.Resources>
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <Canvas Background="#ffffff" Width="1920" Height="1080" MouseLeftButtonDown="PreviewCanvas_LeftMouseDown"></Canvas>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.ItemContainerStyle>
+                                <Style TargetType="ContentPresenter">
+                                    <Setter Property="Canvas.Left" Value="{Binding xPosition, Converter={StaticResource RelativePosToAbsolutePos}, ConverterParameter=1920}" />
+                                    <Setter Property="Canvas.Top" Value="{Binding yPosition, Converter={StaticResource RelativePosToAbsolutePos}, ConverterParameter=1080}" />
+                                </Style>
+                            </ItemsControl.ItemContainerStyle>
+                        </ItemsControl>
                     </Border>
                 </Viewbox>
             </Border>
