--- a/2D_Editor/WelcomeWindow.xaml
+++ b/2D_Editor/WelcomeWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:converters="clr-namespace:_2D_Editor.Converters"
         xmlns:local="clr-namespace:_2D_Editor"
         mc:Ignorable="d"
@@ -27,6 +28,8 @@
                                    Margin="15, 0, 0, 0"
                                    TextDecorations="Underline"
                                    Foreground="Blue"
+                                   Cursor="Hand"
+                                   MouseLeftButtonDown="Register_Clicked"
                                    >Register</TextBlock>
                     </StackPanel>
                     <Separator/>
@@ -40,7 +43,48 @@
                     <TextBox x:Name="inputEmail"/>
                     <TextBlock Margin="0, 10, 0, 0">Password</TextBlock>
                     <PasswordBox x:Name="inputPassword" />
+                    <CheckBox x:Name="inputRemember" Margin="0, 10, 0, 0">Remember Me</CheckBox>
                     <Button Margin="0, 20, 0, 0" Click="LoginButton_Click">Login</Button>
+                    <Border x:Name="loadingSpinner" Width="30" Margin="0, 10, 0, 0" Visibility="Hidden">
+                        <fa:ImageAwesome Icon="Spinner" Spin="True" SpinDuration="4"/>
+                    </Border>
+                </StackPanel>
+            </Border>
+            <Border x:Name="registerForm" BorderThickness="1" Background="White" Visibility="Collapsed">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontSize="30">Register</TextBlock>
+                        <TextBlock VerticalAlignment="Bottom"
+                                   Margin="15, 0, 0, 0"
+                                   TextDecorations="Underline"
+                                   Foreground="Blue"
+                                   Cursor="Hand"
+                                   MouseLeftButtonDown="Login_Clicked"
+                                   >Login</TextBlock>
+                    </StackPanel>
+                    <Separator/>
+                    <TextBlock Margin="0, 10, 0, 0">Email</TextBlock>
+                    <TextBox x:Name="inputRegisterEmail"/>
+                    <TextBlock Margin="0, 10, 0, 0">Password</TextBlock>
+                    <PasswordBox x:Name="inputRegisterPassword" />
+                    <TextBlock Margin="0, 10, 0, 0">Repeat Password</TextBlock>
+                    <PasswordBox x:Name="inputRegisterPasswordCheck" />
+                    <Button Margin="0, 20, 0, 0" Click="LoginButton_Click">Register</Button>
+                    <Border x:Name="registerErrorBox" Background="#ff715e" BorderBrush="#ab2e1d" BorderThickness="2" Margin="0, 10, 0, 0" Visibility="Collapsed">
+                        <DockPanel>
+                            <TextBlock x:Name="registerErrorMessage" DockPanel.Dock="Left"  Foreground="White" Margin="5, 2, 0, 2" Text="Error"/>
+                            <TextBlock DockPanel.Dock="Right"  Foreground="White" HorizontalAlignment="Right" Margin="0, 2, 5, 2" Cursor="Hand" Text="X" MouseLeftButtonDown="RegisterErrorClose_Clicked"/>
+                        </DockPanel>
+                    </Border>
+                    <Border x:Name="registerSuccessBox" Background="#65c980" BorderBrush="#3a7049" BorderThickness="2" Margin="0, 10, 0, 0" Visibility="Collapsed">
+                        <DockPanel>
+                            <TextBlock x:Name="registerSuccessMessage" DockPanel.Dock="Left"  Foreground="White" Margin="5, 2, 0, 2" Text="Error"/>
+                            <TextBlock DockPanel.Dock="Right"  Foreground="White" HorizontalAlignment="Right" Margin="0, 2, 5, 2" Cursor="Hand" Text="X" MouseLeftButtonDown="RegisterSuccess_Clicked"/>
+                        </DockPanel>
+                    </Border>
+                    <Border x:Name="registerLoadingSpinner" Width="30" Margin="0, 10, 0, 0" Visibility="Hidden">
+                        <fa:ImageAwesome Icon="Spinner" Spin="True" SpinDuration="4"/>
+                    </Border>
                 </StackPanel>
             </Border>
             <Border x:Name="selectPresentation" BorderThickness="1" Margin="0, 30, 0, 0" Visibility="Collapsed">
@@ -54,7 +98,7 @@
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="0" Content="New" Margin="5,0" Click="NewPres_Click" />
                         <Button Grid.Column="1" Content="Open" Margin="5, 0" Click="OpenPres_Click" />
-                        <Button Grid.Column="2" Content="Download" Margin="5, 0"/>
+                        <Button Grid.Column="2" Content="Download" Margin="5, 0" Click="DownloadButton_Click"/>
                     </Grid>
                 </StackPanel>
             </Border>
