--- a/2D_Editor/MainWindow.xaml
+++ b/2D_Editor/MainWindow.xaml
@@ -73,7 +73,7 @@
         <StatusBar DockPanel.Dock="Bottom" Background="#b0bec9">
             <StatusBarItem>
                 <Label>
-                    <TextBlock>Hallo Statusbar</TextBlock>
+                    <TextBlock x:Name="StatsbarInfo" Text="Ready"/>
                 </Label>
             </StatusBarItem>
         </StatusBar>
@@ -84,7 +84,7 @@
                     <StackPanel Orientation="Horizontal">
                         <Canvas Width="30" Height="30">
                             <Rectangle x:Name="rec_toogle_button" Width="30" Height="30" Canvas.Left="0" Canvas.Top="0" Fill="#FFF5F5F6" Visibility="Hidden" />
-                            <Image Source="Images/toggle_hide.png" Canvas.Left="0" Canvas.Top="0"  Width="30" Height="30" MouseLeftButtonDown="Toggle_Toolbox_LeftMouseDown" MouseEnter="Toggle_Toolbox_MouseEnter" MouseLeave="Toggle_Toolbox_MouseLeave"/>
+                            <Image Source="Images/settings.png" Canvas.Left="0" Canvas.Top="0"  Width="30" Height="30" MouseLeftButtonDown="Toggle_Toolbox_LeftMouseDown" MouseEnter="Toggle_Toolbox_MouseEnter" MouseLeave="Toggle_Toolbox_MouseLeave"/>
                         </Canvas>
                     </StackPanel>
                 </Border>
@@ -139,7 +139,7 @@
                                     <Border BorderBrush="Black" BorderThickness="1">
                                         <StackPanel Margin="5">
                                             <Label>Text</Label>
-                                            <TextBox Text="{Binding content}"/>
+                                            <TextBox Text="{Binding content, UpdateSourceTrigger=PropertyChanged}"/>
                                             <Separator/>
                                             <Label>X Position</Label>
                                             <StackPanel Orientation="Horizontal">
